<resources>
    <string name="app_name">Let\'s Eat</string>
    <string name="facebook_app_id">1892000557731162</string>
    <string name="fb_login_protocol_scheme">fb1892000557731162</string>
    <string name="name">Name</string>
    <string name="emailHint">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password_text">Forgot your password? Enter your email address below and we will send you password reset instruction.</string>
    <string name="btnLoginWithFacebook">Log In With Facebook</string>
    <string name="change_password_content">Please enter your current password and new password.</string>
    <string name="new_password">New password</string>
    <string name="place_name">Place name</string>
    <string name="place_desc">Place description</string>
    <string name="add_address_btn">Add address</string>
    <string name="add_review_btn">Add review</string>
    <string name="phone">Phone number</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="dialog_add_address_map_title">Add address</string>
    <string name="your_here">You are here</string>
    <string name="btnViewAll">View all</string>
    <string name="btnLoginWithGoogle">Log In With Google</string>
    <string name="btnLoginAnonymous">Log In Anonymous</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="navigation_bottom_text_home">Home</string>
    <string name="navigation_bottom_text_favorite">My favorite</string>
    <string name="navigation_bottom_text_add_review">Add review</string>
    <string name="navigation_bottom_text_profile">Profile</string>
    <string name="hello_blank_fragment">this is new fragment!</string>
    <string name="review_add_title_screen">Add new review</string>
    <string name="review_favorite_title_screen">My favorite reviews</string>
    <string name="profile_title_screen">My profile</string>
    <string name="register_title_screen">Register</string>
    <string name="forgot_password_title_screen">Forgot password</string>
    <string name="log_in_title_screen">Log in</string>
    <string name="workingHourFrom">Open from</string>
    <string name="workingHourTo">to</string>
    <string name="priceFrom">Open from</string>
    <string name="priceTo">to</string>
    <string name="change_password">Change password</string>
    <string name="update_profile">Update profile</string>
    <string name="btnChangeImage">Change Image</string>
    <string name="take_picture">Take a picture</string>
    <string name="select_from_storage">Select from storage</string>
    <string name="clear">Clear</string>
    <string name="select_image">Select image</string>
    <string name="title_activity_maps">Map</string>
    <string name="progress_dialog">Let\'s Eat processing</string>
    <string name="please_wait">Please wait...</string>
</resources>
