<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_title_screen"
        android:theme="@style/AppTheme.TitleScreenNoToolbar"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtEmailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/title"
        android:theme="@style/AppTheme.TextInputLayout"
        app:errorTextAppearance="@style/error_appearance"
        >
        <EditText
            android:id="@+id/edtEmail"
            android:hint="@string/emailHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtEmailWrapper"
        android:theme="@style/AppTheme.TextInputLayout"
        >
        <EditText
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:id="@+id/btnLinkWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtPasswordWrapper"
        >
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:theme="@style/AppTheme.ButtonLink"
            android:background="@null"
            android:gravity="start"
            android:textAlignment="textStart"
            android:layout_alignParentLeft="true"
            />
        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:theme="@style/AppTheme.ButtonLink"
            android:background="@null"
            android:gravity="end"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btnLinkWrapper"
        android:background="@color/colorSecondaryDark"
        android:textColor="@color/textColorSecondary"/>
    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginWithFacebook"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btnLogin"
        android:background="@color/backgroundColorFacebook"
        android:textColor="@color/textColorSecondary"/>
    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginWithGoogle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btnLoginFacebook"
        android:background="@color/backgroundColorGoogle"
        android:textColor="@color/textColorSecondary"/>
    <Button
        android:id="@+id/btnLoginAnonymous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginAnonymous"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btnLoginGoogle"
        android:background="@color/colorSecondaryLight"
        android:textColor="@color/textColorSecondary"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"/>
</RelativeLayout>
