<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    >
    <TextView
        android:id="@+id/title"
        android:text="@string/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/changePasswordText"
        android:layout_below="@+id/title"
        android:text="@string/change_password_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/currentPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/changePasswordText"
        android:theme="@style/AppTheme.TextInputLayout">
        <EditText
            android:id="@+id/currentPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/currentPasswordWrapper"
        android:theme="@style/AppTheme.TextInputLayout">
        <EditText
            android:id="@+id/newPassword"
            android:hint="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmNewPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/newPasswordWrapper"
        android:theme="@style/AppTheme.TextInputLayout">
        <EditText
            android:id="@+id/confirmNewPassword"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>