<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorPrimary"
    tools:context="au.edu.csu.itc209.letseat.fragments.Profile_Fragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        >
        <LinearLayout
            android:id="@+id/profileImageWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnProfileImage"
            android:layout_width="@dimen/profileImageWidth"
            android:layout_height="@dimen/profileImageHeight"
            android:src="@drawable/letseat_icon_medium"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImageWrapper"
            android:layout_marginTop="10dp"
            android:theme="@style/AppTheme.TextInputLayout"
            >
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:theme="@style/AppTheme.EditText"
                app:errorTextAppearance="@style/error_appearance"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtEmailWrapper"
            android:layout_below="@id/edtNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/AppTheme.TextInputLayout"
            >
            <EditText
                android:id="@+id/edtEmail"
                android:hint="@string/emailHint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:enabled="false"
                app:errorTextAppearance="@style/error_appearance"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_below="@+id/edtEmailWrapper"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/change_password"
            android:visibility="gone"
            android:theme="@style/AppTheme.ButtonLink"
            />
        <Button
            android:id="@+id/btnUpdate"
            android:layout_below="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:theme="@style/AppTheme.ButtonPrimary"
            android:background="@color/colorSecondaryDark"
            android:textColor="@color/textColorSecondary"
            />
        <Button
            android:id="@+id/btnClear"
            android:layout_below="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/clear"
            android:theme="@style/AppTheme.ButtonPrimary"
            android:background="@color/colorSecondaryDark"
            android:textColor="@color/textColorSecondary"
            />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
