<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.edu.csu.itc209.letseat.fragments.Review_Add_Fragment"
    android:background="@color/backgroundColorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtNameWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.TextInputLayout"
            >
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.EditText"
                android:textColorHint="@color/textColorPrimary"
                android:textColor="@color/textColorPrimary"
                android:hint="@string/place_name"
                app:errorTextAppearance="@style/error_appearance"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtDescWrapper"
            android:layout_below="@+id/edtNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.TextInputLayout"
            >
            <EditText
                android:id="@+id/edtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_desc"
                android:maxLines="3"
                android:inputType="text"
                android:minLines="3"
                android:theme="@style/AppTheme.EditText"
                android:textColorHint="@color/textColorPrimary"
                android:textColor="@color/textColorPrimary"
                app:errorTextAppearance="@style/error_appearance"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtPhoneWrapper"
            android:layout_below="@+id/edtDescWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.TextInputLayout">
            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:theme="@style/AppTheme.EditText"
                android:textColorHint="@color/textColorPrimary"
                android:textColor="@color/textColorPrimary"
                app:errorTextAppearance="@style/error_appearance"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnOpenPopupMap"
            android:layout_below="@+id/edtDescWrapper"
            android:background="@null"
            android:text="@string/add_address_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ButtonLink"
            />
        <LinearLayout
            android:id="@+id/timeOpenWrapper"
            android:layout_below="@+id/btnOpenPopupMap"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.EditText"
                android:textColor="@color/textColorPrimary"
                android:text="@string/workingHourFrom"/>
            <Spinner
                android:id="@+id/ddlTimeOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.EditText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:theme="@style/AppTheme.EditText"
                android:text="@string/workingHourTo"/>
            <Spinner
                android:id="@+id/ddlTimeClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.EditText"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/priceWrapper"
            android:layout_below="@+id/timeOpenWrapper"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:text="@string/priceFrom"/>
            <Spinner
                android:id="@+id/ddlPriceFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.EditText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:text="@string/priceTo"/>
            <Spinner
                android:id="@+id/ddlPriceTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.EditText"
                />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
