<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="au.edu.csu.itc209.letseat.activities.ForgotPasswordActivity">
    <FrameLayout
        android:id="@+id/fragment_status_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        android:layout_below="@+id/fragment_status_bar_container"
        >
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:textColor="@color/textColorPrimary"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordText"
            android:layout_marginTop="10dp"
            android:theme="@style/AppTheme.TextInputLayout">
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:theme="@style/AppTheme.EditText"
                app:errorTextAppearance="@style/error_appearance"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmailWrapper"
            android:background="@color/colorSecondaryDark"
            android:text="@string/reset"
            android:textColor="@color/textColorSecondary"/>
    </RelativeLayout>
</RelativeLayout>
