<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.edu.csu.itc209.letseat.activities.RegisterActivity">

    <FrameLayout
        android:id="@+id/fragment_status_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/fragment_status_bar_container"
        android:theme="@style/AppTheme.TextInputLayout">
        <EditText
            android:id="@+id/edtName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtEmailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtNameWrapper"
        android:theme="@style/AppTheme.TextInputLayout"
        >
        <EditText
            android:id="@+id/edtEmail"
            android:hint="@string/emailHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtEmailWrapper"
        android:theme="@style/AppTheme.TextInputLayout"
        >
        <EditText
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtConfirmPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edtPasswordWrapper"
        android:theme="@style/AppTheme.TextInputLayout"
        >
        <EditText
            android:id="@+id/edtConfirmPassword"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/textColorPrimary"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/AppTheme.EditText"
            app:errorTextAppearance="@style/error_appearance"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtConfirmPasswordWrapper"
        android:background="@color/colorSecondaryDark"
        android:textColor="@color/textColorSecondary"/>
</RelativeLayout>
